# ElectronsAndProtons

./: .gitignore  CMakeLists.txt  ElectronsAndProtons.sln  Instrukcja.txt
ElectronsAndProtons/: ElectricField.cpp  ElectricField.h  ElectronsAndProtons.vcxproj  ElectronsAndProtons.vcxproj.filters  SimulationScenarios.h  basic_shaders.glsl  constants.h  cpu_implementation.cpp  cpu_implementation.h  glfw_functions.cpp  glfw_functions.h  gputimer.h  interactions.cpp  interactions.h  kernel.cu  kernel.h  main.cpp  program_loader.h  shader_loader.cpp  shader_loader.h
ElectronsAndProtons/x64/Debug/: ElectronsAndProtons.exe.recipe  kernel.cu.cache  kernel.cu2007289367.deps  vc143.idb
ElectronsAndProtons/x64/Debug/Electron.90207A81.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  ElectronsAndProtons.lastbuildstate  ElectronsAndProtons.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ElectronsAndProtons/x64/Release/: ElectronsAndProtons.exe.recipe  ElectronsAndProtons.iobj  ElectronsAndProtons.ipdb  kernel.cu.cache  kernel.cu2007289367.deps
ElectronsAndProtons/x64/Release/Electron.90207A81.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CudaCompile.read.1u.tlog  CudaCompile.write.1u.tlog  ElectronsAndProtons.lastbuildstate  ElectronsAndProtons.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: ElectronsAndProtons.exp  ElectronsAndProtons.lib
